...
struct MovieSearchResult : Decodable {
    var search : [Movie]?
    var totalResults : String?
    var response : String?
    
    enum CodingKeys: String, CodingKey {
        case search = "Search"
        case totalResults = "totalResults"
        case response = "Response"
    }
}

