...
                            <constraint firstItem="eyi-IU-kvH" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="IXH-h9-D2d"/>
                            <constraint firstItem="eyi-IU-kvH" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="MtS-hs-bKa"/>
                            <constraint firstItem="eyi-IU-kvH" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="oFi-lm-YXP"/>
                            <constraint firstAttribute="bottom" secondItem="eyi-IU-kvH" secondAttribute="bottom" id="uqh-Fe-yPu"/>
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="Movie List" id="gft-5b-rcZ"/>
                    <connections>
                        <outlet property="movieCollectionView" destination="eyi-IU-kvH" id="Fc6-a4-BY0"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
            </objects>
...
